# bachelors

BSK/crypto/: helper.py  solution.py  solution.txt  task_1.py  task_2.py  task_3.py  task_3_18.py
BSK/security/: README.md  decompress.c  latwe.py  solution.rtf  solution_easier.py  solution_hard.py  trudne.py  zad5-solve-old.py
JNP1-tri/: CMakeLists.txt  README.md  tri_ex.cpp  tri_list.h  tri_list2.h  tri_list_example.cc  tttt.h
JNP1-tri/.svn/: wc.db
JNP1-tri/testy-zad7-main/: LICENSE  README.md  ce1_template_types.cc  ce2_template_types.cc  ce3_template_types.cc  ce4_template_types.cc  ce5_template_types.cc  ce6_template_types.cc  ce7_template_types.cc  ce8_template_types.cc  ok0_example.cc  ok1_modify_only.cc  ok2_modifier_compose_identity.cc  ok3_constant_time.cc  ok4_template_types.cc  test.sh
JPP/prolog/: jw429677.pl
PW/: CMakeLists.txt  Main.java  Matric.java  MatrixRowSumsThreadsafe.java  Tree.h  Vectors.java  grep-par.cpp  isprime.java  koszykowka  main.c  path_utils.c  tree.c
SIK/collatz-main/: Makefile  collatz.hpp  main  main.cpp  new_process  sharedresults.hpp  teams.cpp  teams.hpp  teams2.cpp
SIK/sik-mikro-9-main/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  myping  myping.c  rawping  spoofping
SIK/sik1-main/: CMakeLists.txt  README.md  common.h  common.hpp  err.h  err.hpp.gch  parse_file.h  parse_file.hpp  request.h  request.hpp  response.h  response.hpp  ticket_server.c  ticket_server.cpp  validate_flags.h  validate_flags.hpp
SO/SO-1-main/: polynomial_degree.asm  (+1 more)
distributed/: .gitignore
(+97 files in other folders)
